src/App.css
@import url("https://fonts.googleapis.com/css?family=Coustard|Roboto:300");
*, *::before, *::after {
  box-sizing: border-box; }

html,
body {
  margin: 0;
  padding: 0; }

html {
  line-height: 1.15; }

body {
  font-family: 'Roboto', sans-serif;
  font-size: 1rem;
  font-weight: 300; }

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Coustard', sans-serif;
  font-weight: 400; }

h1 {
  font-size: 2.5rem; }

h2 {
  font-size: 2rem; }

h3 {
  font-size: 1.75rem; }

h4 {
  font-size: 1.5rem; }

h5 {
  font-size: 1.25rem; }

h6 {
  font-size: 1rem; }

@keyframes blink {
  0% {
    opacity: 1; }
  50% {
    opacity: 0; }
  100% {
    opacity: 1; } }

@keyframes blinkToHidden {
  0% {
    opacity: 0; }
  50% {
    opacity: 1; }
  100% {
    opacity: 0; } }

@keyframes fadeInSlide {
  0% {
    transform: translateY(10px);
    opacity: 0; }
  30% {
    transform: translateY(0); }
  to {
    opacity: 1; } }

@keyframes scaleToSize {
  0% {
    transform: scale(0.7); }
  100% {
    transform: scale(1); } }

.flex-content-center {
  display: flex;
  align-items: center;
  justify-content: center; }

.full-viewport-min {
  min-width: 100vw;
  min-height: 100vh; }

.text-emphasis {
  color: #b0bac0; }

@media (min-width: 576px) {
  .sm-only {
    display: none; } }

.app {
  overflow: hidden;
  min-height: 100vh;
  color: #717c80; }
  .app::before {
    position: absolute;
    z-index: -2;
    width: 100vw;
    height: 100vh;
    content: ''; }
    .dark .app::before {
      background-color: #232729; }
    .light .app::before {
      background-color: #f5f5f5; }

.logo-wrapper {
  position: absolute;
  z-index: -2;
  top: 0;
  left: 0;
  overflow: hidden;
  width: 100vw;
  height: 100vh; }

.logo {
  position: relative;
  width: 100%;
  height: 100%;
  transition: transform 0.5s, translate 0.5s;
  transform: scale(5); }
  .logo svg {
    position: absolute;
    top: 50%;
    transform: translateY(-50%); }
    .dark .logo svg {
      fill: #2b3033; }
    .light .logo svg {
      fill: #eee; }

.slogan {
  max-width: 100vw;
  padding: 0 15px;
  text-align: center; }
  .slogan__icons {
    display: flex;
    height: 36px;
    margin: 0;
    padding: 0;
    list-style: none;
    justify-content: center; }
    @media (min-width: 576px) {
      .slogan__icons {
        height: 64px; } }
    @media (max-width: 575px) {
      .slogan__icons.is-active .slogan__link:not(.is-active) {
        max-width: 0;
        opacity: 0; } }
  .slogan__link {
    position: relative;
    display: flex;
    max-width: 500px;
    padding-top: 5px;
    padding-bottom: 5px;
    transition: opacity 0.5s, max-width 0.2s;
    white-space: nowrap;
    text-decoration: none;
    text-transform: none;
    opacity: 1;
    color: #717c80;
    outline: none;
    font-size: 1.5rem; }
    @media (min-width: 576px) {
      .slogan__link {
        margin-right: 2px;
        padding-right: 2px; }
        .slogan__link::after {
          position: absolute;
          z-index: -1;
          top: 0;
          left: 0;
          display: none;
          box-sizing: content-box;
          width: 100%;
          height: 100%;
          margin-top: -2px;
          margin-left: 1px;
          padding: 2px 0 2px 4px;
          content: '';
          opacity: 0.2;
          border-radius: 64px;
          background-color: #717c80; }
        .slogan__link:focus::after {
          display: block; } }
  .slogan li {
    white-space: nowrap; }
    .slogan li.start-animation {
      transform: scale(0.7);
      animation: scaleToSize 1s forwards; }
      .slogan li.start-animation:nth-child(1) .slogan__icon {
        animation: fadeInSlide 0.5s 0.1s forwards; }
      .slogan li.start-animation:nth-child(2) .slogan__icon {
        animation: fadeInSlide 0.5s 0.2s forwards; }
      .slogan li.start-animation:nth-child(3) .slogan__icon {
        animation: fadeInSlide 0.5s 0.3s forwards; }
      .slogan li.start-animation:nth-child(4) .slogan__icon {
        animation: fadeInSlide 0.5s 0.4s forwards; }
      .slogan li.start-animation:nth-child(5) .slogan__icon {
        animation: fadeInSlide 0.5s 0.5s forwards; }
      .slogan li.start-animation:nth-child(6) .slogan__icon {
        animation: fadeInSlide 0.5s 0.6s forwards; }
      .slogan li.start-animation:nth-child(7) .slogan__icon {
        animation: fadeInSlide 0.5s 0.7s forwards; }
  .slogan__icon {
    display: block;
    width: 36px;
    height: 36px;
    margin-left: 5px;
    padding: 8px;
    opacity: 0;
    border-radius: 18px;
    background-color: #717c80; }
    .dark .slogan__icon {
      box-shadow: inset 0 0 0 2px #232729, 0 0 0 1px #717c80; }
    .light .slogan__icon {
      box-shadow: inset 0 0 0 2px #f5f5f5, 0 0 0 1px #717c80; }
    @media (min-width: 576px) {
      .slogan__icon {
        width: 64px;
        height: 64px;
        margin-left: 10px;
        padding: 16px;
        border-radius: 32px;
        box-shadow: inset 0 0 0 4px #fff, 0 0 0 2px #717c80; }
        .dark .slogan__icon {
          box-shadow: inset 0 0 0 4px #232729, 0 0 0 2px #717c80; }
        .light .slogan__icon {
          box-shadow: inset 0 0 0 4px #f5f5f5, 0 0 0 2px #717c80; } }
    .slogan__icon.is-active {
      box-shadow: inset 0 0 0 3px #fff, 0 0 0 2px #717c80; }
      .slogan__icon.is-active svg {
        fill: #fff !important; }
      @media (min-width: 576px) {
        .slogan__icon.is-active {
          box-shadow: inset 0 0 0 6px #fff, 0 0 0 4px #717c80; } }
    .slogan__icon svg {
      max-width: 100%;
      max-height: 100%; }
      .dark .slogan__icon svg {
        fill: #232729; }
      .light .slogan__icon svg {
        fill: #f5f5f5; }
  .slogan__title {
    display: inline-block;
    overflow: hidden;
    max-width: 0;
    padding-left: 5px;
    transition: max-width 0.7s 0.2s ease-out;
    line-height: 36px; }
    @media (min-width: 576px) {
      .slogan__title {
        padding-left: 10px;
        transition: max-width 1s ease-out;
        line-height: 64px; } }
    .slogan__title.is-active {
      max-width: 20em; }
  .slogan h1 {
    margin-top: 0;
    margin-bottom: 0;
    font-size: 2.3rem; }
    @media (min-width: 992px) {
      .slogan h1 {
        font-size: 4rem; } }
  .slogan p {
    margin-top: 0.75em;
    margin-bottom: 2rem;
    text-transform: uppercase;
    font-size: 1.15rem; }
    @media (min-width: 992px) {
      .slogan p {
        font-size: 1.75rem; } }
  .slogan__delayed-subtitle {
    white-space: nowrap;
    opacity: 0; }
    .slogan__delayed-subtitle.start-animation {
      animation: fadeInSlide 2s forwards;
      white-space: normal; }

.typed-cursor {
  animation: blink 0.7s 2s forwards;
  opacity: 1; }

.slogan-heading + .typed-cursor {
  animation: blinkToHidden 0.7s 2s 3 forwards;
  animation-iteration-count: 3 !important;
  opacity: 1; }

